# GLiNER-Forge

./: .gitignore  README.md  pyproject.toml
bench/: accuracy.py  bench_rk3588s.py  bench_rk3588s_accuracy.py  results.json  results_cuda.md  results_final.md  run_all_sizes.py  run_complete_matrix.py  run_cuda.py  run_final_comprehensive.py  run_full_comparison.py  run_full_matrix.py  run_mlx_perlang.py  run_mps_bench.py  run_multilingual.py  run_onnx_export_bench.py  speed.py  test_data_taiwan.py
bench/reports/: full_matrix_raw.json  full_matrix_report.md  quantization_and_cjk_analysis.md
native/: build.sh
native/src/: bench_main.cpp  gliner_wrapper.cpp  gliner_wrapper.h  hf_tokenizer.cpp  test_main.cpp  tokenizer_stub.cpp
python/: requirements.txt
python/convert/: fix_fp16.py  quantize.py  to_mlx.py  to_onnx.py
python/gliner_mlx/: infer.py
python/gliner_onnx/: infer.py  infer_crossplatform.py
reports/: rk3588s_benchmark.md
src/gliner_forge/: __init__.py  bench.py  onnx_infer.py
